# STT_from_scratch

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  eval_enpl_greedy_beam.csv  eval_enpl_greedy_beam_kenlm.csv  pyproject.toml
.github/workflows/: ci.yml
configs/: data.yaml  data_600h.yaml  data_800h.yaml
configs/train/: ctc_4090.env  ctc_4090_65m.env  ctc_4090_65m_v2.env  ctc_4090_65m_v3.env  ctc_4090_65m_v4.env  ctc_4090_65m_v5.env  ctc_4090_65m_v6.env  ctc_4090_oom.env  ctc_attn_4090.env  ctc_attn_4090_65m.env  rnnt_4090.env  tdt_4090.env  transducer_4090.env
models/: sp_en_pl_balanced_unigram_2k_lower.model  sp_en_pl_balanced_unigram_2k_lower.vocab  sp_en_pl_unigram_2k.model  sp_en_pl_unigram_2k.vocab  sp_en_pl_unigram_2k_lower.model  sp_en_pl_unigram_2k_lower.vocab  spm_unigram_2k_trainval.model  spm_unigram_2k_trainval.vocab  spm_unigram_4k_trainval.model  spm_unigram_4k_trainval.vocab  tokenizer_ls_clean100_en.model  tokenizer_ls_clean100_en.vocab
scripts/: add_librispeech_en.py  average_checkpoints.py  checkpoint_utils.py  data_config.py  download_augment_data.py  init_encoder_from_checkpoint.py  manifest_durations_analysis.py  prepare_data.py  prepare_librispeech_clean_100.py  prepare_multilingual_asr.py  preview_augmentations.py  rebalance_dataset.py  rebuild_final_manifests.py  tokenizer_coverage_report.py  train_tokenizer.py
scripts/data/: build_augment_banks.py  download_augment_data.py  fix_manifest_durations.py  generate_dataset_stats.py  resample_manifest.py
scripts/data/prepare_data/: __init__.py  hf_loader.py  overlap.py
scripts/eval/: benchmark_offline.py  plot_benchmark.py
scripts/models/: average_checkpoints.py  init_encoder_from_checkpoint.py
scripts/prepare_data/: __main__.py  buckets.py  cli.py  config.py  hf_loader.py  manifest.py  pipeline.py
scripts/utils/: watch_tdt_train.sh
src/SpeechToText/: augmentation.py  dataset.py  evaluate.py  features.py  model.py  train.py  transcribe.py
src/SpeechToText/demo/: __init__.py  analytics_tab.py  app.py  transcribe_logic.py
src/SpeechToText/models/common/: __init__.py  aux_layers.py  batch_filter.py  callbacks.py  checkpoint_io.py  config.py  decode_ctc.py  eval_decoding.py  examples_buffer.py  inference.py  losses.py  metrics.py  optimizer_factory.py  optimizers.py  protocols.py  rnnt.py  train_factory.py  transducer_modules.py  validation_logging.py
src/SpeechToText/models/conformer/: __init__.py  conformer.py  drop_path.py  subsampling.py
src/SpeechToText/models/ctc/: __init__.py  config.py  lit.py  model.py  steps.py  train.py
src/SpeechToText/models/ctc_attention/: __init__.py  config.py  decode.py  lit.py  model.py  steps.py  train.py
src/SpeechToText/models/shared/: __init__.py  config.py  lit.py  model.py
src/SpeechToText/models/tdt/: __init__.py  config.py  decoder.py  joint.py  lit.py  loss.py  model.py  steps.py  train.py  typing.py
src/SpeechToText/streaming/: __init__.py  config.py  encoder_state.py  latency.py  session.py  streaming_ctc.py  streaming_tdt.py
src/SpeechToText/utils/: audio.py  decoding.py  losses.py
tests/: test_clean_pass_augment.py  test_decode_ctc.py  test_encoder_length.py  test_estimate_encoder_length.py  test_init_encoder_checkpoint.py  test_load_audio_bank.py  test_manifest_filter.py  test_overlap.py  test_prepare_buckets.py  test_rnnt_incremental_decode.py  test_tdt_decode_mode.py  test_tdt_loss.py
tests/ctc/: test_ctc_attn_decode.py  test_ctc_attn_staging.py
tests/demo/: test_transcribe_logic.py
tests/eval/: test_plot_benchmark.py
tests/models/: test_demo_app.py  test_inference_detect.py  test_init_encoder_checkpoint.py  test_shared_model.py  test_transducer_modules.py
tests/streaming/: test_streaming_ctc.py
tests/tdt/: test_tdt_loss.py
tools/: make_shards.py
(+4 files in other folders)
